--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src self; upgrade-insecure-requests"
+    Content-Security-Policy = "upgrade-insecure-requests"
     Permissions-Policy = "fullscreen=(self), geolocation=(), camera=(), microphone=()"
     Referrer-Policy = "no-referrer"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
