--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,22 @@
 # Site settings
-title: "Youcode"
+title: "YouCode | Créateur de solutions depuis 2020"
 description: "Votre site vitrine clef-en-main dès maintenant !"
-author: "Youcode, créateur de solutions depuis 2020"
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+author: "YouCode | Créateur de solutions depuis 2020"
 
 # Contact settings
 email: "stan@youcode.io"
 adresse: "7. Rue Le Bouvier, Bourg-La-Reine 92340"
 telephone: "+33 6 48 80 88 75"
 
-# Build settings
-
-#Minify CSS
+# Minify CSS
 sass:
  style: compressed
-
-#Minify HTML
+ 
+# Minify HTML
 compress_html:
-    clippings: []
-    comments: ["<!-- ", " -->"]
-    endings: []
-    blanklines: false
-    profile: false
-    startings: []
-
-markdown: kramdown
+ clippings: []
+ comments: ["<!-- ", " -->"]
+ endings: []
+ blanklines: false
+ profile: false
+ startings: []
