refactor: Update text content

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: "YouCode | Créateur de solutions depuis 2020"
+title: "YouCode"
 description: "Votre site vitrine clef-en-main dès maintenant !"
-author: "YouCode | Créateur de solutions depuis 2020"
+author: "YouCode"
 
 # Contact settings
-email: "stan@youcode.io"
+email: "bonjour@youcode.fr"
 adresse: "7. Rue Le Bouvier, Bourg-La-Reine 92340"
 telephone: "+33 6 48 80 88 75"
 
